mesa-git hangs weston
On RX560, Archlinux kernel 5.8 and mesa-git, weston hangs on launch. weston-launch 2> errors show EGL_BAD_ALLOC and something about front buffer. Reverting to mesa 20.3.0 fixes the issue.
mesa config:
arch-meson mesa build
-D b_lto=false
-D b_ndebug=true
-D platforms=wayland
-D gallium-drivers=radeonsi
-D dri-drivers=
-D vulkan-drivers=amd
-D egl=true
-D opengl=true
-D gallium-extra-hud=false
-D gallium-nine=false
-D gallium-omx=disabled
-D gallium-va=false
-D gallium-opencl=disabled
-D gbm=true
-D gles1=false
-D gles2=true
-D glvnd=false
-D glx=disabled
-D libunwind=false
-D microsoft-clc=disabled
-D llvm=true
-D lmsensors=false
-D osmesa=false
-D shared-glapi=true
-D vulkan-overlay-layer=true
-D valgrind=false